--- a/Analysis_neural_networks.ipynb
+++ b/Analysis_neural_networks.ipynb
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we are using a neural network consisting of one hidden layer and one output layer (including input layer which we don't necessarily count as a layer)"
+    "Here we are using a neural network consisting of one hidden layer(containing one node) and one output layer (including input layer which we don't necessarily count as a layer)"
    ]
   },
   {
