--- a/Analysis_neural_networks.ipynb
+++ b/Analysis_neural_networks.ipynb
@@ -32,7 +32,7 @@
         "id": "eQwFA1bQqIkb"
       },
       "source": [
-        "# Project:Deeper understanding of how neural networks learn(Part-I)\n",
+        "# Project :Deeper understanding of how neural networks learn (I)\n",
         "## Objective : To go through how the matrix changes its shape and make its way through the layers to the final output layer and how updation of weights effects the overall loss and prediction power of the network !\n",
         "\n",
         "### The codes have been highly influenced by the one given on the Andrew Trask's blog page\n",
