--- a/Analysis_neural_networks.ipynb
+++ b/Analysis_neural_networks.ipynb
@@ -97,34 +97,34 @@
         "    weights_hidden_to_output : weights matrix from hidden to output layer\n",
         "    shapes : if shapes required to be printed or not \n",
         "    '''\n",
-        "  if shapes == True:\n",
-        "    for j in range(n):\n",
-        "      print(\"inside the loop....\")\n",
-        "      h1 = 1/(1+np.exp(-(np.dot(X,weights_input_to_hidden))))\n",
-        "      print(f\"first output shape : {X.shape} x {weights_input_to_hidden.shape} =  {h1.shape}\")\n",
-        "      print(f\"shape of h1 : {h1.shape}\")\n",
-        "      print(f\"shape of weights_hidden_to_output : {weights_hidden_to_output.shape}\")\n",
-        "      output = 1/(1+np.exp(-(np.dot(h1,weights_hidden_to_output))))\n",
-        "      print(f\"second outupt shape {h1.shape} x {weights_hidden_to_output.shape} = {output.shape}\")\n",
-        "      print(f\"predicted :\")\n",
-        "      print(output)\n",
-        "      print()\n",
-        "      output_delta = (y - output)*(output*(1-output))\n",
-        "      h1_delta = output_delta.dot(weights_hidden_to_output.T) * (h1 * (1-h1))\n",
-        "      weights_hidden_to_output += h1.T.dot(output_delta)\n",
-        "      weights_input_to_hidden += X.T.dot(h1_delta)\n",
-        "  else:\n",
-        "    for j in range(n):\n",
-        "      # feedforward pass\n",
-        "      h1 = 1/(1+np.exp(-(np.dot(X,weights_input_to_hidden))))\n",
-        "      output = 1/(1+np.exp(-(np.dot(h1,weights_hidden_to_output))))\n",
-        "      # backpropogation of error \n",
-        "      output_delta = (y - output)*(output*(1-output))\n",
-        "      h1_delta = output_delta.dot(weights_hidden_to_output.T) * (h1 * (1-h1))\n",
-        "      # updation of weights\n",
-        "      weights_hidden_to_output += h1.T.dot(output_delta)\n",
-        "      weights_input_to_hidden += X.T.dot(h1_delta)\n",
-        "  return weights_input_to_hidden, weights_hidden_to_output"
+        "    if shapes == True:\n",
+        "        for j in range(n):\n",
+        "            print(\"inside the loop....\")\n",
+        "            h1 = 1/(1+np.exp(-(np.dot(X,weights_input_to_hidden))))\n",
+        "            print(f\"first output shape : {X.shape} x {weights_input_to_hidden.shape} =  {h1.shape}\")\n",
+        "            print(f\"shape of h1 : {h1.shape}\")\n",
+        "            print(f\"shape of weights_hidden_to_output : {weights_hidden_to_output.shape}\")\n",
+        "            output = 1/(1+np.exp(-(np.dot(h1,weights_hidden_to_output))))\n",
+        "            print(f\"second outupt shape {h1.shape} x {weights_hidden_to_output.shape} = {output.shape}\")\n",
+        "            print(f\"predicted :\")\n",
+        "            print(output)\n",
+        "            print()\n",
+        "            output_delta = (y - output)*(output*(1-output))\n",
+        "            h1_delta = output_delta.dot(weights_hidden_to_output.T) * (h1 * (1-h1))\n",
+        "            weights_hidden_to_output += h1.T.dot(output_delta)\n",
+        "            weights_input_to_hidden += X.T.dot(h1_delta)\n",
+        "    else:\n",
+        "        for j in range(n):\n",
+        "            # feedforward pass\n",
+        "            h1 = 1/(1+np.exp(-(np.dot(X,weights_input_to_hidden))))\n",
+        "            output = 1/(1+np.exp(-(np.dot(h1,weights_hidden_to_output))))\n",
+        "            # backpropogation of error \n",
+        "            output_delta = (y - output)*(output*(1-output))\n",
+        "            h1_delta = output_delta.dot(weights_hidden_to_output.T) * (h1 * (1-h1))\n",
+        "            # updation of weights\n",
+        "            weights_hidden_to_output += h1.T.dot(output_delta)\n",
+        "            weights_input_to_hidden += X.T.dot(h1_delta)\n",
+        "    return weights_input_to_hidden, weights_hidden_to_output"
       ],
       "execution_count": 0,
       "outputs": []
@@ -154,10 +154,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "W18dO_zrcl8N",
-        "outputId": "7a698640-b78e-4734-8e72-fcaf95c10975",
+        "outputId": "c25aa559-0ed3-4652-ea10-e1860c297b98",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 985
+          "height": 995
         }
       },
       "source": [
@@ -190,7 +190,7 @@
         "\n",
         "print()\n",
         "print(\"Let's now iterate more and check how these weights get updated\")\n",
-        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(10000, X, y, weights_input_to_hidden, weights_hidden_to_output)\n",
+        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(10000, X, y, weights_input_to_hidden, weights_hidden_to_output, False)\n",
         "\n",
         "\n",
         "print(\"new weights from input to hidden\")\n",
@@ -198,7 +198,7 @@
         "print(\"new weights from hidden to output\")\n",
         "print(weights_hidden_to_output)"
       ],
-      "execution_count": 0,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,15 +216,15 @@
             " [0]]\n",
             "shape of Y : (4, 1)\n",
             "weights initialized from input to hidden:\n",
-            "[[-0.95248212  0.94801853 -0.06155864 -0.39234065]\n",
-            " [ 0.09271474  0.07193927  0.71815955  0.63630801]\n",
-            " [-0.27803125 -0.27031507  0.32315005 -0.38833101]]\n",
+            "[[ 0.81782303  0.95969135  0.15655927 -0.16690352]\n",
+            " [-0.00180481  0.73578928 -0.57032858  0.19066284]\n",
+            " [ 0.76723382  0.14705598 -0.98890526 -0.56767396]]\n",
             "shape of weights_input_to_hidden: (3, 4)\n",
             "weights iniatialized from hidden to output:\n",
-            "[[ 0.19642532]\n",
-            " [ 0.45506969]\n",
-            " [ 0.56397485]\n",
-            " [-0.62344138]]\n",
+            "[[ 0.5093118 ]\n",
+            " [-0.74293308]\n",
+            " [-0.37334562]\n",
+            " [-0.95113288]]\n",
             "shape of weights_hidden_to_output: (4, 1)\n",
             "Let's play with one time pass and check the shapes of matrix data as they pass from input to output:\n",
             "inside the loop....\n",
@@ -233,31 +233,31 @@
             "shape of weights_hidden_to_output : (4, 1)\n",
             "second outupt shape (4, 4) x (4, 1) = (4, 1)\n",
             "predicted :\n",
-            "[[0.58827215]\n",
-            " [0.58924374]\n",
-            " [0.61515074]\n",
-            " [0.61715719]]\n",
+            "[[0.3784271 ]\n",
+            " [0.34756135]\n",
+            " [0.36420226]\n",
+            " [0.3448391 ]]\n",
             "\n",
             "new weights from input to hidden\n",
-            "[[-0.95461549  0.94281835 -0.06524971 -0.3819703 ]\n",
-            " [ 0.09229036  0.06867838  0.7126517   0.64365783]\n",
-            " [-0.28218765 -0.28023282  0.31069686 -0.37182911]]\n",
+            "[[ 0.82279962  0.94609927  0.14955591 -0.18036304]\n",
+            " [ 0.00891509  0.71987164 -0.57365041  0.17392407]\n",
+            " [ 0.77872087  0.12715718 -0.99727118 -0.5955438 ]]\n",
             "new wegiths from hidden to output\n",
-            "[[ 0.16534501]\n",
-            " [ 0.39959341]\n",
-            " [ 0.50026153]\n",
-            " [-0.66421253]]\n",
+            "[[ 0.60704923]\n",
+            " [-0.64265716]\n",
+            " [-0.34252003]\n",
+            " [-0.90402795]]\n",
             "\n",
             "Let's now iterate more and check how these weights get updated\n",
             "new weights from input to hidden\n",
-            "[[-6.7052325   1.18180632  3.23274259 -5.12925888]\n",
-            " [ 5.20302659  0.54319827  3.02951548  6.72972856]\n",
-            " [-2.39163355  0.41617517  0.13267     2.17696983]]\n",
+            "[[ 7.06885096  2.14403306 -0.32311451  4.09532197]\n",
+            " [ 6.49955721 -1.2906453   0.79312209  5.04087269]\n",
+            " [-2.97294418  1.7316125  -0.19571147 -6.93288546]]\n",
             "new weights from hidden to output\n",
-            "[[10.09316813]\n",
-            " [ 0.84866199]\n",
-            " [ 4.31944962]\n",
-            " [-9.7516889 ]]\n"
+            "[[ 10.65037375]\n",
+            " [ -4.96686006]\n",
+            " [ -1.73433319]\n",
+            " [-10.6052312 ]]\n"
           ],
           "name": "stdout"
         }
@@ -288,9 +288,9 @@
         "    weights_input_to_hidden : weights matrix from input to hidden layer\n",
         "    weights_hidden_to_output : weights matrix from hidden to output layer\n",
         "    '''\n",
-        "      h1 = 1/(1+np.exp(-(np.dot(X,weights_input_to_hidden))))\n",
-        "      output = 1/(1+np.exp(-(np.dot(h1,weights_hidden_to_output))))\n",
-        "      return output"
+        "    h1 = 1/(1+np.exp(-(np.dot(X,weights_input_to_hidden))))\n",
+        "    output = 1/(1+np.exp(-(np.dot(h1,weights_hidden_to_output))))\n",
+        "    return output"
       ],
       "execution_count": 0,
       "outputs": []
@@ -319,7 +319,7 @@
         "    y : actual label (matrix)\n",
         "    Y : predicted label (matrix)\n",
         "    '''\n",
-        "  return np.mean((y - Y)**2)"
+        "    return np.mean((y - Y)**2)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -340,23 +340,23 @@
       "metadata": {
         "colab_type": "code",
         "id": "CaomDCq3ljNV",
-        "outputId": "ff411746-00c9-4da9-9fcd-7d4b457c3f7a",
+        "outputId": "ea3b5d0d-29d8-4bf6-8844-cfa492991d7d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
-        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(10000, X, y, weights_input_to_hidden, weights_hidden_to_output)\n",
+        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(10000, X, y, weights_input_to_hidden, weights_hidden_to_output, False)\n",
         "error = MSE(y, run_network(X, weights_input_to_hidden, weights_hidden_to_output))\n",
         "print(error)"
       ],
-      "execution_count": 0,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "3.84720358988406e-05\n"
+            "4.0107463780298154e-06\n"
           ],
           "name": "stdout"
         }
@@ -367,23 +367,23 @@
       "metadata": {
         "colab_type": "code",
         "id": "dJMP2xWxpocz",
-        "outputId": "9840b743-24e6-4b91-e79a-297d6db25f0e",
+        "outputId": "76caefad-b02e-4160-fa6e-c3db6075226c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
-        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(20000, X, y, weights_input_to_hidden, weights_hidden_to_output)\n",
-        "error = MSE(y, run_network(X1, weights_input_to_hidden, weights_hidden_to_output))\n",
+        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(20000, X, y, weights_input_to_hidden, weights_hidden_to_output, False)\n",
+        "error = MSE(y, run_network(X, weights_input_to_hidden, weights_hidden_to_output))\n",
         "print(error)"
       ],
-      "execution_count": 0,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2.268337988998213e-05\n"
+            "3.640432255734101e-06\n"
           ],
           "name": "stdout"
         }
@@ -394,23 +394,23 @@
       "metadata": {
         "colab_type": "code",
         "id": "cRsvd5ySpvad",
-        "outputId": "7fa71953-709f-4d15-93be-75d4c93adb07",
+        "outputId": "06a9827e-b915-4339-9732-55ffe82d35ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
-        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(40000, X, y, weights_input_to_hidden, weights_hidden_to_output)\n",
+        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(40000, X, y, weights_input_to_hidden, weights_hidden_to_output, False)\n",
         "error = MSE(y, run_network(X, weights_input_to_hidden, weights_hidden_to_output))\n",
         "print(error)"
       ],
-      "execution_count": 0,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "1.241752187774674e-05\n"
+            "3.067497883744055e-06\n"
           ],
           "name": "stdout"
         }
@@ -421,24 +421,24 @@
       "metadata": {
         "colab_type": "code",
         "id": "6JlRzLpkqB0Q",
-        "outputId": "169a25e2-6752-4711-d75d-cde5a70ee150",
+        "outputId": "574d88ca-237d-41ec-ab42-2d47758301e4",
         "scrolled": false,
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
-        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(100000, X, y, weights_input_to_hidden, weights_hidden_to_output)\n",
+        "weights_input_to_hidden, weights_hidden_to_output = feed_forward_backpropogation_train(100000, X, y, weights_input_to_hidden, weights_hidden_to_output, False)\n",
         "error = MSE(y, run_network(X, weights_input_to_hidden, weights_hidden_to_output))\n",
         "print(error)"
       ],
-      "execution_count": 0,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "5.803759988643886e-06\n"
+            "2.1877647038761036e-06\n"
           ],
           "name": "stdout"
         }
