--- a/Analysis_neural_networks.ipynb
+++ b/Analysis_neural_networks.ipynb
@@ -185,7 +185,7 @@
         "\n",
         "print(\"new weights from input to hidden\")\n",
         "print(weights_input_to_hidden)\n",
-        "print(\"new wegiths from hidden to output\")\n",
+        "print(\"new weights from hidden to output\")\n",
         "print(weights_hidden_to_output)\n",
         "\n",
         "print()\n",
