--- a/Analysis_neural_networks.ipynb
+++ b/Analysis_neural_networks.ipynb
@@ -88,6 +88,7 @@
       },
       "source": [
         "# function for feedforward and backpropogation step \n",
+        "#if shapes = True, that means we want to print the shapes as well otherwise no shape will be printed, only pass will be done.\n",
         "def feed_forward_backpropogation_train(n, X, y, weights_input_to_hidden, weights_hidden_to_output, shapes = True):\n",
         "    '''\n",
         "    n : number of iterations\n",
