--- a/Analysis_neural_networks.ipynb
+++ b/Analysis_neural_networks.ipynb
@@ -35,15 +35,7 @@
         "# Project :Deeper understanding of how neural networks learn (I)\n",
         "## Objective : To go through how the matrix changes its shape and make its way through the layers to the final output layer and how updation of weights effects the overall loss and prediction power of the network !\n",
         "\n",
-        "### The codes have been highly influenced by the one given on the Andrew Trask's blog page\n",
-        "\n",
-        "\n",
-        "The following is like a walk-through tutorial, so i hope you enjoy !\n",
-        "\n",
-        "```\n",
-        "references\n",
-        "```\n",
-        "[Andrew Trask's code for neural network](https://iamtrask.github.io/2015/07/12/basic-python-network/)\n"
+        "### The codes have been highly influenced by the one given on  [Andrew Trask's blog](https://iamtrask.github.io/2015/07/12/basic-python-network/)\n"
       ]
     },
     {
@@ -199,7 +191,7 @@
         "print(\"new weights from hidden to output\")\n",
         "print(weights_hidden_to_output)"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,7 +344,7 @@
         "error = MSE(y, run_network(X, weights_input_to_hidden, weights_hidden_to_output))\n",
         "print(error)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,7 +371,7 @@
         "error = MSE(y, run_network(X, weights_input_to_hidden, weights_hidden_to_output))\n",
         "print(error)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -406,7 +398,7 @@
         "error = MSE(y, run_network(X, weights_input_to_hidden, weights_hidden_to_output))\n",
         "print(error)"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +426,7 @@
         "error = MSE(y, run_network(X, weights_input_to_hidden, weights_hidden_to_output))\n",
         "print(error)"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
